--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "deploy": "npm run build && gh-pages -d dist",
+    "deploy": "npm run build && gh-pages",
     "preview": "vite preview",
     "format": "prettier --write .",
     "lint": "eslint --ext ts .",
-    "lint:fix": "eslint --ext ts --fix ."
+    "lint:fix": "eslint --ext ts --fix .",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
